c/src/cmavsdk/plugins/action_server/action_server.h


typedef struct mavsdk_server_component_s *mavsdk_server_component_t;
typedef struct mavsdk_action_server_s *mavsdk_action_server_t;
typedef struct mavsdk_action_server_arm_disarm_handle_s *mavsdk_action_server_arm_disarm_handle_t;
typedef struct mavsdk_action_server_flight_mode_change_handle_s *mavsdk_action_server_flight_mode_change_handle_t;
typedef struct mavsdk_action_server_takeoff_handle_s *mavsdk_action_server_takeoff_handle_t;
typedef struct mavsdk_action_server_land_handle_s *mavsdk_action_server_land_handle_t;
typedef struct mavsdk_action_server_reboot_handle_s *mavsdk_action_server_reboot_handle_t;
typedef struct mavsdk_action_server_shutdown_handle_s *mavsdk_action_server_shutdown_handle_t;
typedef struct mavsdk_action_server_terminate_handle_s *mavsdk_action_server_terminate_handle_t;
typedef enum {
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_UNKNOWN = 0,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_READY = 1,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_TAKEOFF = 2,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_HOLD = 3,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_MISSION = 4,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_RETURN_TO_LAUNCH = 5,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_LAND = 6,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_OFFBOARD = 7,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_FOLLOW_ME = 8,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_MANUAL = 9,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_ALTCTL = 10,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_POSCTL = 11,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_ACRO = 12,
    MAVSDK_ACTION_SERVER_FLIGHT_MODE_STABILIZED = 13,
} mavsdk_action_server_flight_mode_t;
typedef struct CMAVSDK_EXPORT {
    bool can_auto_mode;
    bool can_guided_mode;
    bool can_stabilize_mode;
    bool can_auto_rtl_mode;
    bool can_auto_takeoff_mode;
    bool can_auto_land_mode;
    bool can_auto_loiter_mode;
} mavsdk_action_server_allowable_flight_modes_t;
CMAVSDK_EXPORT void mavsdk_action_server_allowable_flight_modes_destroy(
    mavsdk_action_server_allowable_flight_modes_t* target);
typedef struct CMAVSDK_EXPORT {
    bool arm;
    bool force;
} mavsdk_action_server_arm_disarm_t;
CMAVSDK_EXPORT void mavsdk_action_server_arm_disarm_destroy(
    mavsdk_action_server_arm_disarm_t* target);
typedef enum {
    MAVSDK_ACTION_SERVER_RESULT_UNKNOWN = 0,
    MAVSDK_ACTION_SERVER_RESULT_SUCCESS = 1,
    MAVSDK_ACTION_SERVER_RESULT_NO_SYSTEM = 2,
    MAVSDK_ACTION_SERVER_RESULT_CONNECTION_ERROR = 3,
    MAVSDK_ACTION_SERVER_RESULT_BUSY = 4,
    MAVSDK_ACTION_SERVER_RESULT_COMMAND_DENIED = 5,
    MAVSDK_ACTION_SERVER_RESULT_COMMAND_DENIED_LANDED_STATE_UNKNOWN = 6,
    MAVSDK_ACTION_SERVER_RESULT_COMMAND_DENIED_NOT_LANDED = 7,
    MAVSDK_ACTION_SERVER_RESULT_TIMEOUT = 8,
    MAVSDK_ACTION_SERVER_RESULT_VTOL_TRANSITION_SUPPORT_UNKNOWN = 9,
    MAVSDK_ACTION_SERVER_RESULT_NO_VTOL_TRANSITION_SUPPORT = 10,
    MAVSDK_ACTION_SERVER_RESULT_PARAMETER_ERROR = 11,
    MAVSDK_ACTION_SERVER_RESULT_NEXT = 12,
} mavsdk_action_server_result_t;
typedef void (*mavsdk_action_server_arm_disarm_callback_t)(const mavsdk_action_server_result_t result, const mavsdk_action_server_arm_disarm_t arm, void* user_data);
typedef void (*mavsdk_action_server_flight_mode_change_callback_t)(const mavsdk_action_server_result_t result, const mavsdk_action_server_flight_mode_t flight_mode, void* user_data);
typedef void (*mavsdk_action_server_takeoff_callback_t)(const mavsdk_action_server_result_t result, const bool takeoff, void* user_data);
typedef void (*mavsdk_action_server_land_callback_t)(const mavsdk_action_server_result_t result, const bool land, void* user_data);
typedef void (*mavsdk_action_server_reboot_callback_t)(const mavsdk_action_server_result_t result, const bool reboot, void* user_data);
typedef void (*mavsdk_action_server_shutdown_callback_t)(const mavsdk_action_server_result_t result, const bool shutdown, void* user_data);
typedef void (*mavsdk_action_server_terminate_callback_t)(const mavsdk_action_server_result_t result, const bool terminate, void* user_data);
CMAVSDK_EXPORT mavsdk_action_server_t mavsdk_action_server_create(mavsdk_server_component_t server_component);
CMAVSDK_EXPORT void mavsdk_action_server_destroy(mavsdk_action_server_t action_server);
CMAVSDK_EXPORT mavsdk_action_server_arm_disarm_handle_t mavsdk_action_server_subscribe_arm_disarm(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_arm_disarm_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_arm_disarm(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_arm_disarm_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_flight_mode_change_handle_t mavsdk_action_server_subscribe_flight_mode_change(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_flight_mode_change_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_flight_mode_change(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_flight_mode_change_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_takeoff_handle_t mavsdk_action_server_subscribe_takeoff(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_takeoff_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_takeoff(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_takeoff_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_land_handle_t mavsdk_action_server_subscribe_land(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_land_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_land(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_land_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_reboot_handle_t mavsdk_action_server_subscribe_reboot(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_reboot_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_reboot(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_reboot_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_shutdown_handle_t mavsdk_action_server_subscribe_shutdown(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_shutdown_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_shutdown(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_shutdown_handle_t);
CMAVSDK_EXPORT mavsdk_action_server_terminate_handle_t mavsdk_action_server_subscribe_terminate(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_terminate_callback_t callback,
    void* user_data);
CMAVSDK_EXPORT void mavsdk_action_server_unsubscribe_terminate(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_terminate_handle_t);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_allow_takeoff(
    mavsdk_action_server_t action_server,
    bool allow_takeoff);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_armable(
    mavsdk_action_server_t action_server,
    bool armable,
    bool force_armable);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_disarmable(
    mavsdk_action_server_t action_server,
    bool disarmable,
    bool force_disarmable);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_allowable_flight_modes(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_allowable_flight_modes_t flight_modes);
CMAVSDK_EXPORT
void
mavsdk_action_server_get_allowable_flight_modes(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_allowable_flight_modes_t* flight_modes_out);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_armed_state(
    mavsdk_action_server_t action_server,
    bool is_armed);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_flight_mode(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_flight_mode_t flight_mode);
CMAVSDK_EXPORT
mavsdk_action_server_result_t
mavsdk_action_server_set_flight_mode_internal(
    mavsdk_action_server_t action_server,
    mavsdk_action_server_flight_mode_t flight_mode);