py/pymavsdk/plugins/action_server/action_server.py


    def set_allow_takeoff(self, allow_takeoff):
        """Get set_allow_takeoff (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_allow_takeoff(
            self._handle,
            allow_takeoff,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_allow_takeoff failed: {result}")

        return result

    def set_armable(self, armable, force_armable):
        """Get set_armable (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_armable(
            self._handle,
            armable,
            force_armable,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_armable failed: {result}")

        return result

    def set_disarmable(self, disarmable, force_disarmable):
        """Get set_disarmable (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_disarmable(
            self._handle,
            disarmable,
            force_disarmable,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_disarmable failed: {result}")

        return result

    def set_allowable_flight_modes(self, flight_modes):
        """Get set_allowable_flight_modes (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_allowable_flight_modes(
            self._handle,
            flight_modes.to_c_struct(),
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_allowable_flight_modes failed: {result}")

        return result

    def get_allowable_flight_modes(self):
        """Get get_allowable_flight_modes (blocking)"""

        result_out = AllowableFlightModesCStruct()

        self._lib.mavsdk_action_server_get_allowable_flight_modes(
            self._handle, ctypes.byref(result_out)
        )

        py_result = AllowableFlightModes.from_c_struct(result_out)
        self._lib.mavsdk_action_server_allowable_flight_modes_destroy(
            ctypes.byref(result_out)
        )
        return py_result

    def set_armed_state(self, is_armed):
        """Get set_armed_state (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_armed_state(
            self._handle,
            is_armed,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_armed_state failed: {result}")

        return result

    def set_flight_mode(self, flight_mode):
        """Get set_flight_mode (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_flight_mode(
            self._handle,
            flight_mode,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_flight_mode failed: {result}")

        return result

    def set_flight_mode_internal(self, flight_mode):
        """Get set_flight_mode_internal (blocking)"""

        result_code = self._lib.mavsdk_action_server_set_flight_mode_internal(
            self._handle,
            flight_mode,
        )
        result = ActionServerResult(result_code)
        if result != ActionServerResult.SUCCESS:
            raise Exception(f"set_flight_mode_internal failed: {result}")

        return result

    def destroy(self):
        """Destroy the plugin instance"""
        if self._handle:
            self._lib.mavsdk_action_server_destroy(self._handle)
            self._handle = None

    def __del__(self):
        self.destroy()


# ===== Callback Types =====
ArmDisarmCallback = ctypes.CFUNCTYPE(
    None, ctypes.c_int, ArmDisarmCStruct, ctypes.c_void_p
)
FlightModeChangeCallback = ctypes.CFUNCTYPE(
    None, ctypes.c_int, ctypes.c_int, ctypes.c_void_p
)
TakeoffCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_bool, ctypes.c_void_p)
LandCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_bool, ctypes.c_void_p)
RebootCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_bool, ctypes.c_void_p)
ShutdownCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_bool, ctypes.c_void_p)
TerminateCallback = ctypes.CFUNCTYPE(None, ctypes.c_int, ctypes.c_bool, ctypes.c_void_p)

# ===== Setup Functions =====
_cmavsdk_lib.mavsdk_action_server_create.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_action_server_create.restype = ctypes.c_void_p

_cmavsdk_lib.mavsdk_action_server_destroy.argtypes = [ctypes.c_void_p]
_cmavsdk_lib.mavsdk_action_server_destroy.restype = None

_cmavsdk_lib.mavsdk_action_server_allowable_flight_modes_destroy.argtypes = [
    ctypes.POINTER(AllowableFlightModesCStruct)
]
_cmavsdk_lib.mavsdk_action_server_allowable_flight_modes_destroy.restype = None

_cmavsdk_lib.mavsdk_action_server_arm_disarm_destroy.argtypes = [
    ctypes.POINTER(ArmDisarmCStruct)
]
_cmavsdk_lib.mavsdk_action_server_arm_disarm_destroy.restype = None


_cmavsdk_lib.mavsdk_action_server_subscribe_arm_disarm.argtypes = [
    ctypes.c_void_p,
    ArmDisarmCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_arm_disarm.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_arm_disarm.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_arm_disarm.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_flight_mode_change.argtypes = [
    ctypes.c_void_p,
    FlightModeChangeCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_flight_mode_change.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_flight_mode_change.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_flight_mode_change.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_takeoff.argtypes = [
    ctypes.c_void_p,
    TakeoffCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_takeoff.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_takeoff.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_takeoff.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_land.argtypes = [
    ctypes.c_void_p,
    LandCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_land.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_land.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_land.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_reboot.argtypes = [
    ctypes.c_void_p,
    RebootCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_reboot.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_reboot.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_reboot.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_shutdown.argtypes = [
    ctypes.c_void_p,
    ShutdownCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_shutdown.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_shutdown.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_shutdown.restype = None

_cmavsdk_lib.mavsdk_action_server_subscribe_terminate.argtypes = [
    ctypes.c_void_p,
    TerminateCallback,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_subscribe_terminate.restype = ctypes.c_void_p
# Unsubscribe
_cmavsdk_lib.mavsdk_action_server_unsubscribe_terminate.argtypes = [
    ctypes.c_void_p,
    ctypes.c_void_p,
]

_cmavsdk_lib.mavsdk_action_server_unsubscribe_terminate.restype = None


_cmavsdk_lib.mavsdk_action_server_set_allow_takeoff.argtypes = [
    ctypes.c_void_p,
    ctypes.c_bool,
]

_cmavsdk_lib.mavsdk_action_server_set_allow_takeoff.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_set_armable.argtypes = [
    ctypes.c_void_p,
    ctypes.c_bool,
    ctypes.c_bool,
]

_cmavsdk_lib.mavsdk_action_server_set_armable.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_set_disarmable.argtypes = [
    ctypes.c_void_p,
    ctypes.c_bool,
    ctypes.c_bool,
]

_cmavsdk_lib.mavsdk_action_server_set_disarmable.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_set_allowable_flight_modes.argtypes = [
    ctypes.c_void_p,
    AllowableFlightModesCStruct,
]

_cmavsdk_lib.mavsdk_action_server_set_allowable_flight_modes.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_get_allowable_flight_modes.argtypes = [
    ctypes.c_void_p,
    ctypes.POINTER(AllowableFlightModesCStruct),
]

_cmavsdk_lib.mavsdk_action_server_get_allowable_flight_modes.restype = None

_cmavsdk_lib.mavsdk_action_server_set_armed_state.argtypes = [
    ctypes.c_void_p,
    ctypes.c_bool,
]

_cmavsdk_lib.mavsdk_action_server_set_armed_state.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_set_flight_mode.argtypes = [
    ctypes.c_void_p,
    ctypes.c_int,
]

_cmavsdk_lib.mavsdk_action_server_set_flight_mode.restype = ctypes.c_int

_cmavsdk_lib.mavsdk_action_server_set_flight_mode_internal.argtypes = [
    ctypes.c_void_p,
    ctypes.c_int,
]

_cmavsdk_lib.mavsdk_action_server_set_flight_mode_internal.restype = ctypes.c_int
